Fix alignment of icons with rows.

--- a/src/Styles/DataCatalog.less
+++ b/src/Styles/DataCatalog.less
@@ -19,15 +19,19 @@
     line-height: 30px;
 }
 
+.data-catalog-member-top-row {
+    display: table;
+}
+
 .data-catalog-item-label {
-    display: inline-block;
+    display: table-cell;
     font-size: 16px;
     color: #CCCCCC;
     font-weight: lighter;
 }
 
 .data-catalog-group-label {
-    display: inline-block;
+    display: table-cell;
     font-size: 16px;
     color: #CCCCCC;
 }
@@ -49,8 +53,11 @@
 
 .data-catalog-icon {
     position: relative;
-    display: inline-block;
     width: 15px;
     height: 15px;
     fill: #CCCCCC;
+}
+
+.data-catalog-icon-holder {
+    display: table-cell;
 }
